cli: codec chat loop - LCP-incremental re-encode, decoder-driven display
Native-codec models chat by re-encoding the whole Conversation each turn and
ingesting only the longest-common-prefix delta (the reply Message carries
verbatim ids, so the generated turn LCPs through the splice - verified 18-token
deltas per turn); adapter-backed models keep the per-turn path until they port.
Display text is assembled by a plain SpanReplyDecoder with InlineThink
bracketing; instruct/one-shot paths encode through the codec directly.